# hello-rtd

./: .gitignore  .readthedocs.yaml  pyproject.toml
docs/: api_ref.rst  conf.py  examples.rst  getting_started.rst  index.rst  requirements.txt
examples/: test1.ipynb  test2.ipynb
hello_rtd/: __init__.py  test.py
